Next set of changes

--- a/osteoarthritis_detection/static/assets/css/style.css
+++ b/osteoarthritis_detection/static/assets/css/style.css
@@ -1756,3 +1756,31 @@ section {
   color: #fff;
   text-decoration: none;
 }
+
+/* CSS for the spinner */
+.spinner {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.hidden {
+  display: none;
+}
+
+.double-bounce1, .double-bounce2 {
+  width: 20px;
+  height: 20px;
+  background-color: #333;
+  border-radius: 100%;
+  display: inline-block;
+  animation: sk-bounce 2s infinite ease-in-out;
+}
+
+.double-bounce2 {
+  animation-delay: -1s;
+}
+
+@keyframes sk-bounce {
+  0%, 100% { transform: scale(0); }
+  50% { transform: scale(1); }
+}
