Next set of changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -46,7 +46,7 @@
   <div id="topbar" class="d-flex align-items-center fixed-top">
     <div class="container d-flex justify-content-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope"></i> <a href="mailto:contact@example.com">pranitd1@umbc.edu</a>
+        <i class="bi bi-envelope"></i> <a href="mailto:contact@example.com">teamosteoarthoscan@gmail.com</a>
         <i class="bi bi-phone"></i> +1 667 464 5415
       </div>
     </div>
